updated for sv2

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write src",
+    "format": "prettier --write src/index.ts bin/",
     "bin:load": "node bin/load.mjs",
     "bin:join": "node bin/join.mjs",
     "build": "tsc",
-    "start": "node lib/index.js"
+    "run:main": "node lib/index.js"
   },
   "devDependencies": {
-    "@nickgdev/larvitar-types": "^1.1.2",
+    "@nickgdev/larvitar-types": "^1.2.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "mongodb": "5.3",
